# rusty-sysmon

./: .gitignore  build.rs
rusty_sysmon/: Cargo.toml  Dioxus.toml  build.rs
rusty_sysmon/src/: lib.rs  main.rs
rusty_sysmon/src/utility/: convert_helper.rs  cpu.rs  disk.rs  host.rs  mod.rs  network.rs  process.rs  ram.rs
rusty_sysmon/ui/: app.slint
rusty_sysmon/ui/element/: topbar.slint
rusty_sysmon/ui/element/icon_button/: refresh_button.slint  round_button.slint
rusty_sysmon/ui/element/process/: pid.slint  searchbar.slint  show_pid.slint
rusty_sysmon/ui/element/system/: cpu.slint
rusty_sysmon/ui/page/: network_page.slint  process_page.slint  system_page.slint
rusty_sysmon/ui/struct_enum/: process.slint
