[package]
name = "rusty_sysmon"
version = "0.1.0"
authors = ["Otterdev_0341 <128258559+otterdev0341@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
wasm-bindgen = "=0.2.99"
local-ip-address = "0.6.3"
num_cpus = "1.16.0"
sysinfo = "0.34.2"
thiserror = "2.0.12"



[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
